# BE_DAO_EDU

./: .cursorrules  .env.example  .prettierrc  ARCHITECTURE.md  DEPLOYMENT_PM2.md  DEPLOYMENT_PRODUCTION.md  README.md  check_pricing_columns.cjs  db_schema.html  docker-compose.yml  ecosystem.config.cjs  ke_hoach_tich_hop.html  package-lock.json  package.json  skills-lock.json  test-ai.ts  test.js  test_auth.js  test_payment_periods.cjs  test_pricing_billing.cjs  tsconfig.build.json
.agents/: AGENTS.md
.agents/skills/dao-edu-clean-architecture/: SKILL.md
.agents/skills/dao-edu-ddd/: SKILL.md
.agents/skills/dao-edu-nestjs-typeorm/: SKILL.md
.agents/skills/tdd/: SKILL.md
.github/workflows/: release-deploy.yml
.runtime/: cleanup-assignment-e2e.cjs  e2e-invalid-upload.txt
agent-manager/: .env.example  .gitignore  README.md  pyproject.toml
agent-manager/config/: agents.yaml  models.yaml
agent-manager/src/daog_agents/: __init__.py  api.py  cli.py  config.py  graph.py  logging.py  manager.py  memory.py  model_router.py  repository.py  state.py
agent-manager/tests/: test_config.py  test_memory.py  test_model_router.py  test_repository.py  test_routing.py
infra/: .env.example  .gitignore  README.md  docker-compose.yml
scratch/: check-db.js  fix_arch_specs.cjs  move_tests.cjs  run-usecase.ts  test-course.js  test-date.js  verify-db.js  verify-pricing.js
scripts/: deploy-pm2.sh  init-prod-admin.js
seeds/: dev.js  prod.js
src/: app.module.ts  architecture.spec.ts  main.ts
src/infrastructure/: infrastructure.module.ts
test/unit/: architecture.spec.ts
(+419 files in other folders)
