[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "daog-agent-manager"
version = "0.1.0"
description = "Token-efficient LangGraph multi-agent manager for DAO EDU"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "langchain>=1.0,<2",
  "langchain-anthropic>=1.0,<2",
  "langchain-openai>=1.0,<2",
  "langgraph>=1.0,<2",
  "langgraph-checkpoint-sqlite>=3.0,<4",
  "pydantic>=2.10,<3",
  "python-dotenv>=1.0,<2",
  "PyYAML>=6.0,<7",
  "structlog>=24.4,<26",
  "typer>=0.15,<1",
  "uvicorn>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "ruff>=0.9,<1",
]

[project.scripts]
daog-agents = "daog_agents.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/daog_agents"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
